// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Constructor add body 1`] = `
Object {
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/something": Object {
      "patch": Object {
        "description": "desc",
        "operationId": "patchid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "description": "Sample body",
                "properties": Object {
                  "username": Object {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Sample body",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "plain/text": Object {},
            },
            "description": "Success",
          },
        },
        "summary": "summary",
        "tags": Array [
          "example",
        ],
      },
      "post": Object {
        "description": "desc",
        "operationId": "postid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "description": "Sample body",
                "properties": Object {
                  "username": Object {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Sample body",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "plain/text": Object {},
            },
            "description": "Success",
          },
        },
        "summary": "summary",
        "tags": Array [
          "example",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Constructor add body, referenced 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "Username": Object {
        "description": "Sample body",
        "properties": Object {
          "username": Object {
            "description": "Parameter without description.",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/something": Object {
      "patch": Object {
        "description": "desc",
        "operationId": "patchid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "$ref": "#/components/schemas/Username",
              },
            },
          },
          "description": "Sample body",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "plain/text": Object {},
            },
            "description": "Success",
          },
        },
        "summary": "summary",
        "tags": Array [
          "example",
        ],
      },
      "post": Object {
        "description": "desc",
        "operationId": "postid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "$ref": "#/components/schemas/Username",
              },
            },
          },
          "description": "Sample body",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "plain/text": Object {},
            },
            "description": "Success",
          },
        },
        "summary": "summary",
        "tags": Array [
          "example",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Constructor addPath, public vs private method (private method does not get included) 1`] = `
Object {
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/health": Object {
      "get": Object {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Constructor setLicense 1`] = `
Object {
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 33.0",
      "url": "http://www.apache.org/licenses/LICENSE-33.0.html",
    },
    "termsOfService": "http://dummy.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/health": Object {
      "get": Object {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Constructor simple, added servers and paths 1`] = `
Object {
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/health": Object {
      "get": Object {
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;
